# isko-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
editor/: CMakeLists.txt
editor/src/: main.cpp
engine/: CMakeLists.txt
engine/include/engine/: hello.hpp
engine/src/engine/: hello.cpp
